# toy-browser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  vcpkg.json
include/browser/: block_layout.hpp  browser.hpp  constants.hpp  css_parser.hpp  document_layout.hpp  draw_commands.hpp  html.hpp  html_parser.hpp  layout.hpp  url.hpp  utils.hpp
src/: CMakeLists.txt  block_layout.cpp  browser.cpp  css_parser.cpp  document_layout.cpp  draw_commands.cpp  html.cpp  html_parser.cpp  layout.cpp  main.cpp  url.cpp
